Remove white space and prevent text for breaking into new line

--- a/src/Button/AddButton.css
+++ b/src/Button/AddButton.css
@@ -14,8 +14,11 @@
     align-items: center;
     display: flex;
     font-weight:700;
-    min-width: 35px;
-    max-height: 30px;
+    min-width: 30px;
+    max-width: 70px;
+    min-height: 22.8px;
+    max-height: 50px;
+    white-space: nowrap;
   
   }
   
